Changed edges style to cubic-curve; Added css classes to all dialogs components; Fixed buttons overlap in dialogs.

--- a/src/gui/graph.css
+++ b/src/gui/graph.css
@@ -8,3 +8,7 @@ node {
 node.important {
         fill-color: red;
     }
+edge {
+    shape: cubic-curve;
+
+}
